FUN-7 | Update workflow to enable bots and update dependencies.